2001-12-14 Stefan Petersen (spe@stacken.kth.se)

	* src/draw.c : Removed gdk_gc_set_line_attribute when drawing
	  a point.
	* src/gerbv.c: Added autoscaling and autocentering, both as
	  a menu option (Zoom/Fit) and when loading a file.

	
2001-12-11 Stefan Petersen (spe@stacken.kth.se)

	* src/gerbv.c : Removed prelighting on buttons and changed
	  the "random function" creating colors. Also fixed "clear 
	  all" remaining after the pan speedup rewrite.

	
2001-12-10 Stefan Petersen (spe@stacken.kth.se)

	* src/gerbv.c : Forgot to check if we had any pixmap to draw.

	
2001-12-09 Stefan Petersen (spe@stacken.kth.se)

	* src/gerber.c: Fixed small bug in min/max calculation
	  which caused big problems.
	* src/gerbv.c: Major rewrite of panning code giving major
	  improvements in screen update speed.
	

2001-12-07 Stefan Petersen (spe@stacken.kth.se)

	* src/draw.[hc], src/gerbv.c : Pseudo optimized drawing.
	* src/gerb_file.c, src/gerbv.c: Fixed bug causing segfault
	  when file didn't exist (oops) and pushed error messages
	  out of gerb_file.c. And if a file (of many) given at 
	  commandline doesn't exist, the next file is tried instead 
	  of halting.

	
2001-12-06 Stefan Petersen (spe@stacken.kth.se)

	* src/drill.c, src/gerb_image.c, src/gerber.c, src/gerbv.c:
	  Exchanged bzero with memset for further portability.
	* scheme/Makefile.am: gerb-debug.scm gets installed too.
	

2001-12-06 Andreas Andersson (e92_aan@e.kth.se)

	* src/drill.[hc]:
	  Very minor change to allow tool number 0.


2001-12-03 Stefan Petersen (spe@stacken.kth.se)

	* src/Makefile.am, src/color.c, src/gerber.c, src/scm_gerber.c:
	  Turned on -Wall and cleaned up after it.

	
2001-12-03 Stefan Petersen (spe@stacken.kth.se)

	* src/drill.h, src/gerber.h, src/gerbv.c:
	  Fixed bug caused by last minute namechange of 
	  gerb_file.[hc].
	* src/gerb_file.[hc]: Added functions gerb_fgetint and
	  gerb_fgetdouble.
	* src/drill.c, src/gerber.c: Utilize the new file read
	  functions.
	
	